@@ -1,3 +1,7 @@
+2005-11-28 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to grsecurity-2.1.7-2.6.14.3-200511261227.patch
+	* info/patches/grsecurity_2_6/grsecurity-2.1.7-2.6.14.3-200511261227.patch: added
+
 2005-11-26 David Brown <dmlb2000@gmail.com>
 	* PRE_BUILD: make sure the source directory doesn't have group and other
 	  write permissions (chmod og-w -R $LINUX_SOURCE_DIRECTORY)
